--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Eric Dong</title>
-  <link rel="stylesheet" type="text/css" href="scontact.css" />
+  <link rel="stylesheet" type="text/css" href="css/contact.css" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script></script>
