--- a/experiment.html
+++ b/experiment.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Eric Dong</title>
-    <link rel="style" type="text/css" href="style.css" />
+    <link rel="style" type="text/css" href="css/style.css" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script></script>
