--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Eric Dong</title>
   <!--<link rel="canonical" href="http://ericdong.com/" />        need edit in future-->
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
   <meta name="robots" content="nofollow" />
   <meta name="author" content="Eric Dong" />
   <meta name="description" content="Eric Dong's Personal Portfolio" />
