finished styled blog

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Eric Dong</title>
-  <!--<link rel="canonical" href="http://ericdong.com/" />        need edit in future-->
+  <link rel="canonical" href="https://eric-dong-hw4.netlify.app/" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <meta name="robots" content="nofollow" />
   <meta name="author" content="Eric Dong" />
