--- a/styledcrud.html
+++ b/styledcrud.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Crud</title>
+    <title>Styled Crud</title>
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styledblog.css" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dompurify@2.3.0/dist/purify.min.js"></script>
     <script type="module">
-        import { blog } from "/js/blog.js";
-        window.onload = blog;
+        import { styledBlog } from "/js/styledblog.js";
+        window.onload = styledBlog;
     </script>
 </head>
 
@@ -24,14 +26,16 @@
         <dialog id="blogDialog">
             Add a new Blog!
             <br>
+            <br>
             <label for="title">Blog Title:</label>
             <input type="text" id="title" name="title">
-            <label for="date">Date (Month Day, Year):</label>
+            <br>
+            <label for="date">Date:</label>
             <input type="date" id="date" name="date" value="2023-02-28" min="2016-09-01" max="2023-3-30">
             <br>
-            <br>
             <label for="sum">Quick Summary of Post (1-2 sentences):</label>
-            <textarea id="summary" name="sum" rows="2" cols="26"></textarea>
+            <br>
+            <textarea id="summary" name="sum" rows="5" cols="40"></textarea>
             <br>
             <button id="Cancel">Cancel</button>
             <button id="Done">Submit</button>
@@ -39,14 +43,16 @@
         <dialog id="editDialog">
             Edit your blog!
             <br>
+            <br>
             <label for="title">Blog Title:</label>
             <input type="text" id="etitle" name="title">
-            <label for="date">Date (Month Day, Year):</label>
+            <br>
+            <label for="date">Date:</label>
             <input type="date" id="edate" name="date" value="2023-02-28" min="2016-09-01" max="2023-3-30">
             <br>
-            <br>
             <label for="sum">Quick Summary of Post (1-2 sentences):</label>
-            <textarea id="esummary" name="sum" rows="2" cols="26"></textarea>
+            <br>
+            <textarea id="esummary" name="sum" rows="5" cols="40"></textarea>
             <br>
             <button id="editCancel">Cancel</button>
             <button id="editDone">Submit</button>
