--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/contact.css" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script></script>
-  <!-- Placeholder -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dompurify@2.3.0/dist/purify.min.js"></script>
   <style></style>
 </head>
 
