Added Google Analytics to every page

--- a/styledcrud.html
+++ b/styledcrud.html
@@ -9,6 +9,15 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dompurify@2.3.0/dist/purify.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WGX24MXLHG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-WGX24MXLHG');
+    </script>
     <script type="module">
         import { styledBlog } from "/js/styledblog.js";
         window.onload = styledBlog;
