--- a/experiment.html
+++ b/experiment.html
@@ -7,7 +7,15 @@
   <link rel="style" type="text/css" href="css/style.css" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WGX24MXLHG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WGX24MXLHG');
+  </script>
   <!-- Placeholder -->
   <style></style>
 </head>
