--- a/home.html
+++ b/home.html
@@ -96,19 +96,119 @@
           <span class="rightarrow"></span>Skills
         </button>
         <div class="panel">
-          <p>Lorem ipsum...</p>
+          <p>Hard Skills</p>
+          <ul>
+            <li>Object Oriented Programming
+              <p>
+                I have learned a variety of languages such as Java, Python, and C++, and I've taken classes and done
+                various projects in different languages.
+              </p>
+            </li>
+            <li>Web Client Languages
+              <p>
+                HTML, CSS, Javascript
+              </p>
+            </li>
+            <li>Other Programming Languages
+              <p>
+                C
+              </p>
+            </li>
+            <li>Data Structures
+              <p>
+                e.g. Bloom Filters, Multiway Tries, Minimum Spanning Trees, Huffman Coding Trees, Aho-Corasick
+                Automaton, Graphs
+              </p>
+            </li>
+            <li>Analysis of Algorithms
+              <p>
+                e.g. Graph Algorithms (DFS, BFS), Divide and Conquer, Greedy Algorithms, Dynamic Programming
+              </p>
+            </li>
+          </ul>
+          <p>Soft Skills</p>
+          <ul>
+            <li>Conflict Resolution
+              <p>
+                Working as a referee and a lifeguard taught me a lot about dealing with angry or even just upset adults
+                and kids, and how not to panic when unexpected variables pop up.
+              </p>
+            </li>
+            <li>Leadership
+              <p>
+                In high school and college, I've thankfully been able to be in a lot of positions of leadership, whether
+                it be leading a small group of people, working and managing a group project, or even being a significant
+                officer of a larger club. There's a lot of humility to be learnt in leadership, but I also learned to
+                communicate more clearly and effectively.
+              </p>
+            </li>
+            <li>Work-Life Balance
+              <p>
+                I've made a lot of timing mistakes in college, but thankfully I've learned to fix a lot of my previous
+                attitudes in having too much work or too much fun. Throughout college, I've learned to balance my time
+                accordingly, to finish everything I need to and I want to finish in a timely, yet stress-free way.
+              </p>
+            </li>
+          </ul>
         </div>
         <button class="accordion">
           <span class="rightarrow"></span>Hobbies
         </button>
         <div class="panel">
-          <p>Lorem ipsum...</p>
+          <ul>
+            <li>Sports
+              <p>
+                I've been a swimmer as long as I can remember, starting from my mom throwing me in the pool from a
+                really young age, to competing in varsity swim and club swim all throughout my high school career. Swim
+                is an amazing way to have fun and relax, while still keeping fit and competitive. In college now, I try
+                to swim when I can to get a hit of nostalgia, but also just to relax on a stressful day.
+              </p>
+              <p>
+                Now, my friends have also really encouraged and helped me enjoy playing many different sports. Even
+                though I learned a lot of sports when I was little (e.g. tennis, baseball, basketball, taekwondo, kung
+                fu, volleyball, etc), I never really enjoyed them too much. However, now I am able to enjoy the
+                recreational games of volleyball, pickleball, tennis, and soccer with my friends.
+              </p>
+            </li>
+            <li>Instruments
+              <p>
+                As many of my friends, I grew up playing violin and piano. However, in a bout of inspiration (and
+                frankly out of a frustration in playing piano), I switched over to cello in the 4th grade. From then on,
+                until playing cello in Washington DC with my middle school orchestra and playing in Disneyland CA with
+                my high school orchestra, I have throughly enjoyed the deep, vibrant tones the cello plays out.
+              </p>
+              <p>
+                Recently, I've decided to switch over to a more accessible and versatile instrument, the guitar. It's
+                been a joy trying to pick up a new instrument and seeing real improvement in my practice. I get to play
+                with my friends as we jam to worship songs and enjoy music as it was designed to be.
+              </p>
+            </li>
+            <li>Music
+              <p>
+                Outside of playing music, I really enjoy listening and even singing along with music. Karaoke has always
+                been a preferred pasttime, but even without singing, I enjoy having music playing in my ears and
+                enjoying the bops from my curated playlists. I've listened to large variety of genres over the years,
+                and my taste has changed a lot, even diving into Musicals for a while. However, some of my favorite
+                artists include Keshi, AKMU, and Sovereign Grace Music.
+              </p>
+            </li>
+            <li>Friends and Clubs
+              <p>
+                My community is a big part of what gives me joy and life, and hanging out with my friends is such a
+                blessing to have during college. I spend much of my time with my church, Lighthouse Bible Church, and
+                the many college studnets that populate the college group. However, I spend even more time with the
+                fellowship I serve in, Asian American Christian Fellowship, and we enjoy a large variety of activities
+                together!
+              </p>
+            </li>
+          </ul>
         </div>
         <button class="accordion">
           <span class="rightarrow"></span>Extras
         </button>
         <div class="panel">
-          <p>Lorem ipsum...</p>
+          <p>I'll figure out what to put in this panel soon :D</p>
+          <p>Stay Tuned!</p>
         </div>
       </div>
     </section>
